--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ td {
 th:hover {
   background: cyan;
 }
-svg {
+td svg {
   height: 20px;
 }
 
@@ -28,4 +28,45 @@ button {
 
 input[type="text"] {
   width: 20rem;
+}
+
+.github-corner > svg {
+  width: 80px;
+  fill: #151513;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  border: 0;
+  right: 0;
+}
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+
+  20%,
+  60% {
+    transform: rotate(-25deg);
+  }
+
+  40%,
+  80% {
+    transform: rotate(10deg);
+  }
+}
+
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    animation: none;
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out;
+  }
 }
